# MpRPC

./: .gitignore  CMakeLists.txt  MpRPC_install.sh  README  README.md
doc/: test_note.md  开发文档.md  框架整体测试文档.md
proto/: CMakeLists.txt  MpRPC_install.sh  rpcheader.proto
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcconfig.cpp  rpcclient.cpp  rpccontroller.cpp  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcconfig.h  rpcclient.h  rpccontroller.h  rpcprovider.h  zookeeperutil.h
test/: CMakeLists.txt  test.conf  test_mprpcapplication.cpp  test_spdlog.cpp  test_zk.cpp
test_integration/: CMakeLists.txt  consumer.cpp  provider.cpp  test.conf  test_8001.conf  user.proto
